<!DOCTYPE resources [<!ENTITY intmin "2"><!ENTITY intmax "9000"><!ENTITY dispmax "100">]>
<resources>
    <string name="app_name">Date Intervals</string>
    <string name="start_date_label">Start Date</string>
    <string name="start_time_label">Start Time</string>
    <string name="end_date_label">End Date</string>
    <string name="end_time_label">End Time</string>
    <string name="num_intervals_label">Number of intervals</string>
    <string name="default_num_intervals">10</string>
    <string name="picker_label">Choose...</string>
    <string name="calculate_label">Calculate!</string>
    <string name="start_date_id">startDateInput</string>
    <string name="start_time_id">startTimeInput</string>
    <string name="end_date_id">endDateInput</string>
    <string name="end_time_id">endTimeInput</string>
    <string name="interval_min">&intmin;</string>
    <string name="interval_max">&intmax;</string>
    <string name="interval_count_bounds">Number of intervals must be between &intmin; and &intmax;.</string>
    <string name="invalid_dates">One of your dates or times are invalid.</string>
    <string name="end_before_start">End Date must be after Start Date.</string>
    <string name="view_results_label">View Results</string>
    <string name="download_results_label">Download as File</string>
    <string name="email_results_label">Email Results</string>
    <string name="back_label">Back to Form</string>
    <string name="back0_label">Back</string>
    <string name="calculating_status">Status: Calculating...</string>
    <string name="done_status">Status: Done!</string>
    <string name="zero_index_label">Zero-index results</string>
    <string name="display_max">&dispmax;</string>
    <string name="too_many_results">Unfortunately, because there are more than &dispmax; intervals, they will not be displayed. Please download or email them.</string>
    <string name="ok">OK</string>
    <string name="file_save_success">File saved successfully in your Downloads folder as </string>
    <string name="file_save_failure">Oops! There was an issue saving your file. The error was: </string>
    <string name="email_need_setup">Please set up your email for this phone, then press the Email Results button again.</string>
    <string name="email_send_failure">Oops! There was an issue sending the email. The error was: </string>
    <string name="permission_granted">Permission granted. Press the Download button AGAIN to download your file.</string>
    <string name="permission_denied">You denied permission to download the file.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
