<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unnamedgreencompany.dateintervals.MainActivity">

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_date_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/startDateInput"
        android:layout_width="214dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

    <TextView
        android:id="@+id/startTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/start_time_label"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateInput" />

    <EditText
        android:id="@+id/startTimeInput"
        android:layout_width="214dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeLabel" />

    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/end_date_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeInput"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/endDateInput"
        android:layout_width="214dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateLabel" />

    <TextView
        android:id="@+id/endTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/end_date_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateInput"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/endTimeInput"
        android:layout_width="214dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeLabel" />

    <TextView
        android:id="@+id/numIntervalsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/num_intervals_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endTimeInput"
        android:layout_marginTop="22dp" />

    <EditText
        android:id="@+id/numIntervalsInput"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_num_intervals"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numIntervalsLabel" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/calculate_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/startDateButton"
        android:layout_width="104dp"
        android:layout_height="45dp"
        android:layout_marginLeft="34dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/picker_label"
        android:tag="@string/start_date_id"
        app:layout_constraintBottom_toBottomOf="@+id/startDateInput"
        app:layout_constraintLeft_toRightOf="@+id/startDateInput"
        app:layout_constraintTop_toTopOf="@+id/startDateInput"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/startTimeButton"
        android:layout_width="104dp"
        android:layout_height="45dp"
        android:layout_marginLeft="34dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/picker_label"
        android:tag="@string/start_time_id"
        app:layout_constraintBottom_toBottomOf="@+id/startTimeInput"
        app:layout_constraintLeft_toRightOf="@+id/startTimeInput"
        app:layout_constraintTop_toTopOf="@+id/startTimeInput"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/endDateButton"
        android:layout_width="104dp"
        android:layout_height="45dp"
        android:layout_marginLeft="34dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/picker_label"
        android:tag="@string/end_date_id"
        app:layout_constraintBottom_toBottomOf="@+id/endDateInput"
        app:layout_constraintLeft_toRightOf="@+id/endDateInput"
        app:layout_constraintTop_toTopOf="@+id/endDateInput"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/endTimeButton"
        android:layout_width="104dp"
        android:layout_height="45dp"
        android:layout_marginLeft="34dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/picker_label"
        android:tag="@string/end_time_id"
        app:layout_constraintBottom_toBottomOf="@+id/endTimeInput"
        app:layout_constraintLeft_toRightOf="@+id/endTimeInput"
        app:layout_constraintTop_toTopOf="@+id/endTimeInput"
        app:layout_constraintVertical_bias="0.571" />


</android.support.constraint.ConstraintLayout>
